# arb-solver

./: Cargo.toml  DESIGN.md  README.md  edges.csv
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  numeric.rs  numeric_kernel.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: csr.rs  lib.rs  solver.rs  traits.rs
crates/core/tests/: csr_property_tests.rs
crates/executor/: Cargo.toml  Config.toml
crates/executor/src/: config.rs  csv_streamer.rs  error.rs  main.rs  producer.rs  searcher.rs  sim_streamer.rs  simulator.rs  types.rs  writer.rs
crates/perf-bench/: Cargo.toml  RESULT.md
crates/perf-bench/src/: lib.rs
